<resources>
    <string name="app_name">BMI app</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="textviewname">TextView</string>
    <string name="title_activity_activitytwo">Activitytwo</string>
    <string name="bmi_calculator">BMI calculator</string>
    <string name="calculate_now">Calculate now</string>
    <string name="enter_your_weight_in_kgs">Enter your weight in KGS</string>
    <string name="enter_height_in_metres">Enter height in metres</string>
    <string name="height">Enter your weight in kgs</string>
    <string name="enter_your_height_in_metres">Enter your height in metres</string>
    <string name="weight">Enter your weight in kgs</string>
    <string name="buttonname">Button</string>
    <string name="calculate_number">CALCULATE</string>
    <string name="result">Name</string>
    <string name="textviewjina">TextView</string>
    <string name="textviewname2">TextView</string>
    <string name="your_bmi_name">Your BMI</string>
    <string name="your_resultname">Your Result</string>
</resources>
