<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/binary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.londonappbrewery.bmiapp.Activitytwo"
    tools:showIn="@layout/activity_activitytwo">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/enter_your_height_in_metres"
        android:inputType="numberDecimal"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:onClick="calcbmi"
        android:text="@string/calculate_number" />

    <TextView
        android:id="@+id/newtext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/your_bmi_name"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/newtext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newtext1"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/newtext1"
        android:layout_marginBottom="25dp"
        android:text="@string/your_resultname"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

</RelativeLayout>
